plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tds'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	implementation 'org.mongodb:mongodb-driver-sync:5.2.1'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
	testImplementation 'org.mockito:mockito-core:5.7.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0'
	compileOnly 'org.projectlombok:lombok'

}

tasks.named('test') {
	useJUnitPlatform()
}
